# food-ordering

./: .env.example  README.md  client.py  food_ordering.db  main.py  pyproject.toml  server.py
